[package]
name = "tide-example"
version = "0.1.0"
authors = ["Yuki Toyoda <yuki.mul.tiplus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.5.1"
serde = { version = "1.0", features = ["derive"] }

[dependencies.async-std]
version = "1.4.0"
features = ["attributes"]
